--- a/html/cartilla.html
+++ b/html/cartilla.html
@@ -48,6 +48,9 @@
         <div class="bienvenida">
             <h2>Cartilla</h2>
         </div>
+        <div class="nosotrosSeccion1">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3276.8252710877423!2d-58.42811428547967!3d-34.78517377462732!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcd253ca533b6d%3A0xb00a764cf3a58e9c!2sLa%20Huella%202199%2C%20Llavallol%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses!2sar!4v1636301512210!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        </div>
     </main>
     <footer>
         <div class="footer__redes">
