--- a/html/odontologia.html
+++ b/html/odontologia.html
@@ -21,8 +21,8 @@
                         <li class="a_submenu"><a href="cartilla.html">CARTILLA
                             <ul class="subMenuProducto">
                                 <li><a href="cartilla.html">Odontologia</a></li>
-                                <li><a href="cartilla.html">Pediatria</a></li>
-                                <li><a href="cartilla.html">Oftalmologia</a></li>
+                                <li><a href="cartilla.html">Clinicas</a></li>
+                                <li><a href="cartilla.html">Farmacias</a></li>
                                 <li><a href="cartilla.html">Ginecologia</a></li>
                                 <li><a href="cartilla.html">Urologia</a></li>
                                 <li><a href="cartilla.html">Cardiologia</a></li>
